          and inserts this character right at the cursor.
          e.g. type "263a" and hit Alt+X - it will insert a little face.

        ! in status change events, the nickname was displayed with the wrong font/color setting
          (own nickname configuration).

        * changed ACK code - the "per message window" ack handler is now replaced by a global
          ack dispatcher.
          
Version 0.9.9.4 - 2005/01/24

        + added support for the snapping windows plugin. Yeah, even if I personally HATE
          snapping windows, its done. Why? Because this great plugin makes it so easy - 
          a single line of code is enough :)
          You can find this great plugin here: 
          http://www.miranda-im.org/download/details.php?action=viewfile&id=923
          
          However, its off by default, you need to activate it by checking the option 
          under Options->Message sessions->Message containers.
        
        * changed window flashing code. Its now using FlashWindowEx() which means that
          tabSRMM won't work on Windows 95 anymore, but I don't think thats a problem :)
          The advantage is a code which is less complex and saves resources as well (the
          old code had to deal with timers for flashing the windows, the new code doesn't
          need to do this anymore).
          
          Another advantage is that you can now set the number of flashes (only applies to
          containers which are using the "default" value and are NOT set to flash forever)
          and the flashing interval. You can find both options under Options->Message sessions->
          Container options.
          
        ! The option "use contacts local time" should no longer break message grouping when
          the adjusted time of the buddy is "in the future".
          
Version 0.9.9.3 - 2005/01/20

        + new "per container option": "Use static icon" - if checked, the 